# purchase_dashboard

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  create_sample_data.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fastapi-analytics-backend.py  index.html  kid-habits-dashboard.tsx  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json
app/: analytics.py  database.py  main.py  ml_models.py  models.py  utils.py
app/api/: analytics.py  analytics_old.py  ml_endpoints.py
app/ml/: __init__.py  anomaly_detector.py  personality_analyzer.py
mongo-init/: init-mongo.js
src/: error-boundary.tsx  index.css  kid-habits-dashboard.tsx  main.tsx  simple-kid-habits-dashboard.tsx
